--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "vscode-dv-flow",
   "description": "VSCode support for the dv-flow build tool",
   "version": "0.0.1",
+  "publisher": "matthew-ballance",
   "engines": {
     "vscode": "^1.98.0"
   },
