Improvements to graph view
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
         "displayName": "Flow Graph View",
         "selector": [
           {
-            "filenamePattern": "*.dot"
+            "filenamePattern": "*.dvg"
           }
         ],
         "priority": "default"
