Add 'dfmPath' setting and update algorithm for discovering the proper Python interpreter
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/package.json
+++ b/package.json
@@ -186,7 +186,17 @@
         "scopeName": "source.yaml",
         "path": "./syntaxes/yaml.tmLanguage.json"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "DV Flow",
+      "properties": {
+        "dvflow.dfmPath": {
+          "type": "string",
+          "default": "",
+          "description": "Path to the DV Flow Manager (dfm) executable"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
