Checkpoint on completion
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/package.json
+++ b/package.json
@@ -423,6 +423,17 @@
           "default": "",
           "description": "Path to the Python interpreter to use for dfm (if dfmPath is not set)"
         },
+        "dvflow.completion.useDfmDiscovery": {
+          "type": "boolean",
+          "default": true,
+          "description": "Use dfm to dynamically discover available tasks from packages for completion suggestions"
+        },
+        "dvflow.completion.dfmCacheTimeout": {
+          "type": "number",
+          "default": 300,
+          "minimum": 0,
+          "description": "Cache timeout in seconds for dfm task discovery (0 = no cache, always query dfm)"
+        },
         "dvflow.perfetto.url": {
           "type": "string",
           "default": "https://ui.perfetto.dev",
